--- a/gift/gift.html
+++ b/gift/gift.html
@@ -44,7 +44,7 @@ HTML code for people to return to. Not like this. I took ONE coding class 2 year
 then, I was not really that great at it cuz the teacher didn'teach jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
-so bland and boring so I had to make it look nicer. Luckily I kinda understand HTML and CSS so I fixed that and I added all 
+so bland and boring so I had to make it look nicer. Luckily, even though the teacher wasn't good at their job, I kinda understand HTML and CSS cuz I thought it was cool and wanted to learn a lil. So, I managed to alter it how I wanted to, and I added all 
 the content myself, all hand-selected for you. In doing that, more and more ideas came up. I was only going to do 
 one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to 
 make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. How was I gonna make that happen in time...? idk.
