--- a/gift/gift.html
+++ b/gift/gift.html
@@ -43,7 +43,8 @@ you. I made like (no joke) 200+ different versions. Probably mostly typos but st
 HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
 then, I was not really that great at it cuz the teacher didn'teach jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
-how to customize it and make it amazing. I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
+how to customize it and make it amazing. <br><br>
+I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
 so bland and boring so I had to make it look nicer. Luckily, even though the teacher wasn't good at their job, I kinda understand HTML and CSS cuz I thought it was cool and wanted to learn a lil. So, I managed to alter it how I wanted to, and I added all 
 the content myself, all hand-selected for you. In doing that, more and more ideas came up. I was only going to do 
 one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to 
