--- a/gift/gift.html
+++ b/gift/gift.html
@@ -36,7 +36,7 @@ To be honest, I did not know what to gift you at all. That's why I asked you. I 
 I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
 searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
 be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you <em>something</em>. A 
-whole lot of something, this whole repository. I made one for Bryce too, but the content is different and I didn't really put as much effort into it as I did 
+whole lot of something, this whole website. I made one for Bryce too, but the content is different and I didn't really put as much effort into it as I did 
 this one. His is only 24 days and it's kinda basic. The point is I put a ton of effort into this gift. <br><br>
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I made like (no joke) 200+ different versions. Probably mostly typos but still. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!" I've never made a full-blown 
