--- a/gift/gift.html
+++ b/gift/gift.html
@@ -41,7 +41,7 @@ this one. His is only 24 days and it's kinda basic. The point is I put a ton of 
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I made like (no joke) 200+ different versions. Probably mostly typos but still. I also learned a lot, whether or not I'll ever use it is another question but um- "oh well!" I've never made a full-blown 
 HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
-then, I was not really that great at it cuz the teacher didn'teach jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
+then, I was not really that great at it cuz the teacher didn't teach jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. <br><br>
 I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
