--- a/24dec13.html
+++ b/24dec13.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <p>
-   Go on Beautiful, you literallly got thisss. You've been putting the hardwork studying and I know you got this!
+   Go on Beautiful, you literallly got thisss. You've been putting the hardwork studying and now it's gonna pay off!
 </body>
 <footer>
 </footer>
