--- a/gift/gift.html
+++ b/gift/gift.html
@@ -60,7 +60,7 @@ along with you on the journey. I love you so darn much. <br>
 idk if it's wrong to bring God into this, but I pray He is always watching and protecting you.
 
             <span class="regards" style="display: block; text-align: right;"> 
-                Always wishing you the Best, <br> Susan G. Gonzalez M.
+                Always wishing you the Best, <br> Susan Gabriela Gonzalez Macias.
             </span>
         </p>
         </div>
