--- a/gift/gift.html
+++ b/gift/gift.html
@@ -30,44 +30,45 @@
                 Beautiful, <br><br>
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
-KFC Day in Japan or smth? idek :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, joyful, and fun 
-holiday to me; I wanted to share that with you. <br><br>
-To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put on this page. 
-I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
-searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
-be the best I could do. Then I remembered I could somewhat code. Technically I'm still writing you <em>something</em>. A 
-whole lot of something, this whole website. I made one for Bryce too, but the content is different and I didn't really 
-put as much effort into it as I did 
-this one. His is only 24 days and it's kinda basic. The point is I put a ton of effort into this gift. <br><br>
+KFC Day in Japan or smth? idek lol :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, 
+joyful, and fun holiday (not just spiritual) to me; I wanted to share that with you. <br><br>
+To be honest, I did not know what to gift you at all. The easy gift would be something physical, or something you could touch, 
+but that's... hard. That's why I asked you for ideas. I did not know what to put on this "gift" page. 
+I drew the image above on the first week of November, when I had nothing planned. The problem was that it didn't feel like it 
+was enough. I tried searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
+be the best I could do. Then I remembered I could somewhat code. Technically, I'm still writing you <em>something</em>. A 
+whole lot of something; this whole website. I made a simpler one for Bryce where the content is different and not as thought out as 
+this one is (his is only 24 days). The point is I put a ton of effort into <strong>this</strong> gift. <br><br>
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I made like (no joke) 500+ different versions. Probably mostly typos but still. I also learned a lot, whether or not 
-I'll ever use it is another question but um- "oh well!" I've never made a full-blown 
-HTML code for people to return to. Not like this. I took ONE coding class 2 years ago and even 
-then, I was not really that great at it cuz the teacher didn't teach jack. But I had one thing clear: I <strong>REALLY</strong> 
-wanted to do something cool 
+I'll ever use it is another question but um- "oh well!" I've never made a full-blown HTML code for people to return to. 
+Not like this. I took ONE coding class 2 years ago and even then, I was not really that great at it because the teacher did not teach 
+jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do something cool 
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. <br><br>
-I did not quite code the entirety from scratch, I looked up the advent calendar page and all the JavaScript stuff. It was 
-so bland and boring so I had to make it look nicer. Luckily, even though the teacher wasn't good at their job, I kinda 
+I did not quite code the <em>entirety</em> from scratch, I looked up how to make the advent calendar page and all the JavaScript stuff (thanks 
+ChatGPT). It was so bland and boring so I had to make it look nicer. Luckily, even though the teacher was not good at their job, I kinda 
 understand HTML and CSS cuz I still had to do the bloody assignments. So, I managed to alter it how I wanted to, and I added all 
-the content myself, all hand-selected for you. In doing that, more and more ideas came up. I was only going to do 
-one page, the one right before this one, Day 25. I wanted to make a gift page so I added this one. Then, I got the idea to 
-make a whole advent calendar. By that time, I only had 2 weeks to finish it and I knew the trip was coming up too. How was 
+the content myself, all hand-selected for you. In doing that, more and more ideas came up. I did not have plans for an advent calendar 
+at all. I was only going to do 
+one page, the one right before this one with cool animations, "Day 25." I wanted to make a gift page so I added this one. Then, I got the idea to 
+make a whole advent calendar. By the time I did, I only had 2 weeks to finish it and I knew the trip was coming up too. How was 
 I gonna make that happen in time...? idk.
-But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
+But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. 
+I had to figure out how to show the puzzles and I even made the quizzes and the stories myself. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I made it my 
-goal to make your experience superb. I hope I was somewhat successful. Idk how I'll ever match up to this again. Will I 
+mission to make your experience superb. I hope I was somewhat successful. Idk how I'll ever match up to this again. Will I 
 need to learn JavaScript next? LOL!
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. And most of all, 
 I hope I was able to distract you a teeny tiny bit from the bad things in life. 
 You mean so much to me Yuri. I wish I could give you the universe. I don't quite think I can do that, but I sure wanna ride 
 along with you on the journey. I love you so darn much. <br>
-idk if it's wrong to bring God into this, but I pray He is always watching and protecting you.
+idk if it's wrong to bring God into this, but I pray He is always watching and protecting you. <3
 
             <span class="regards" style="display: block; text-align: right;"> 
-                Always wishing you the Best, <br> Susan Gabriela Gonzalez Macias.
+                Always wishing you the Best, <br> Susan Gabriela Gonzalez Macias
             </span>
         </p>
         </div>
