--- a/gift/gift.html
+++ b/gift/gift.html
@@ -32,7 +32,7 @@ Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
 KFC Day in Japan or smth? idek lol :D. But Christmas is <em>my</em> favorite holiday. It's the most meaningful, most magical, 
 joyful, and fun holiday (not just spiritual) to me; I wanted to share that with you. <br><br>
-To be honest, I did not know what to gift you at all. The easy gift would be something physical, or something you could touch, 
+To be honest, I did not know what to gift you at all. An easy gift would have been something physical, or something you could touch, 
 but that's... hard. That's why I asked you for ideas. I did not know what to put on this "gift" page. 
 I drew the image above on the first week of November, when I had nothing planned. The problem was that it didn't feel like it 
 was enough. I tried searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
