--- a/gift/gift.html
+++ b/gift/gift.html
@@ -47,13 +47,13 @@ jack. But I had one thing clear: I <strong>REALLY</strong> wanted to do somethin
 for you. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 how to customize it and make it amazing. <br><br>
 I did not quite code the <em>entirety</em> from scratch, I looked up how to make the advent calendar page and all the JavaScript stuff (thanks 
-ChatGPT). It was so bland and boring so I had to make it look nicer. Luckily, even though the teacher was not good at their job, I kinda 
-understand HTML and CSS cuz I still had to do the bloody assignments. So, I managed to alter it how I wanted to, and I added all 
+ChatGPT). It was so bland and boring, so I had to make it look nicer. Luckily, even though the teacher was not good at their job, I kinda 
+understand HTML and CSS because I still had to do the bloody assignments. So, I managed to alter it how I wanted to, and I added all 
 the content myself, all hand-selected for you. In doing that, more and more ideas came up. I did not have plans for an advent calendar 
 at all. I was only going to do 
 one page, the one right before this one with cool animations, "Day 25." I wanted to make a gift page so I added this one. Then, I got the idea to 
-make a whole advent calendar. By the time I did, I only had 2 weeks to finish it and I knew the trip was coming up too. How was 
-I gonna make that happen in time...? idk.
+make a whole advent calendar. By the time I did, I only had 2 weeks to finish it, the first part had taken a while to finish, and I knew 
+the trip was coming up too. How was I gonna make that happen in time...? idk, not stressful at all.
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. 
 I had to figure out how to show the puzzles and I even made the quizzes and the stories myself. Now here 
 we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
