--- a/gift/gift.html
+++ b/gift/gift.html
@@ -56,7 +56,7 @@ make a whole advent calendar. By the time I did, I only had 2 weeks to finish it
 the trip was coming up too. How was I gonna make that happen in time...? idk, not stressful at all.
 But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. 
 I had to figure out how to show the puzzles and I even made the quizzes and the stories myself. Now here 
-we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
+we are. I sent it, and it worked?! -I think. I literally already sent it and I'm STILL adding minor things. I just wanted it 
 to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
 Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I made it my 
 mission to make your experience superb. I hope I was somewhat successful. Idk how I'll ever match up to this again. Will I 
