--- a/gift/gift.html
+++ b/gift/gift.html
@@ -37,8 +37,7 @@ but that's... hard. That's why I asked you for ideas. I did not know what to put
 I drew the image above on the first week of November, when I had nothing planned. The problem was that it did not feel like it 
 was enough. I tried searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
 be the best I could do. Then I remembered I could somewhat code. Technically, I'm still writing you <em>something</em>. A 
-whole lot of something; this whole website. I made a simpler one for Bryce where the content is different and not as thought out as 
-this one is (his is also only 24 days). The point is I put a ton of effort into <strong>this</strong> gift. <br><br>
+whole lot of something; this whole website. I put a ton of effort into <strong>this</strong> gift. <br><br>
 I figured I'd also tell you my thought process on this entire thing. It changed a lot. But it was fun- because it was for 
 you. I made like (no joke) 500+ different versions. Probably mostly typos but still. I also learned a lot, whether or not 
 I'll ever use it is another question but um- "oh well!" I've never made a full-blown HTML code for people to return to. 
