--- a/gift/gift.html
+++ b/gift/gift.html
@@ -64,7 +64,7 @@ I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, 
 I hope I was able to distract you a teeny tiny bit from the bad things in life. 
 You mean so much to me Yuri. I wish I could give you the universe. I don't quite think I can do that, but I sure wanna ride 
 along with you on the journey. I love you so darn much. <br>
-idk if it's wrong to bring God into this, but I pray He is always watching and protecting you. <3
+idk if it's wrong to bring God into this, but I pray He is always watching and protecting you. <3 <br>
 
             <span class="regards" style="display: block; text-align: right;"> 
                 Always wishing you the Best, <br> Susan Gabriela Gonzalez Macias
